# ChangeLog for app-emacs/bison-mode
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/bison-mode/ChangeLog,v 1.2 2015/04/13 19:32:43 nicolasbock Exp $

  13 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> bison-mode-0.3.ebuild:
  app-emacs/bison-mode: Added ~x86 keyword.

*bison-mode-0.3 (13 Apr 2015)

  13 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> +bison-mode-0.3.ebuild,
  +files/50bison-mode-gentoo.el, +metadata.xml:
  app-emacs/bison-mode: Adding new package.