@@ -3,17 +3,20 @@ Hash: SHA256
 
 AUX 50bison-mode-gentoo.el 130 SHA256 e2f7827bfc3aaf8cc4b59c7e90c720694daafde97e6b2607824712bf9e6dc11a SHA512 50b14d2baddf3c2c7597d202264c19bdefe094f887f20b4f4b96f8de0ad11d520f249ebc09fc8f8200413824bc84495955ccfb6123140972cd14e4524be94feb WHIRLPOOL 12d0117f8712ae09af03315389aa83f169f47917d45c31ac5ae5e0966310d95eac6630a44eaa246e2d5b56a4f085439c002e4602aa173d2a3d09274a6d205851
 DIST bison-mode-0.3.tar.bz2 7541 SHA256 ad29b3f71d1d52a36a22271aa314eb986e3406706c34bfb5eca11161dd5adbee SHA512 b3b173152700562f813534d9352ed50cfac8ad131f037b1e2bf9d1370f0b56f109f14206cbfde82acac0c93a1bc0092da7f78c1b42fc3154248dfb1222a7f85b WHIRLPOOL 563b9def2187fdae93220a30d0e536eeb504b0f3706454a1c49074846ddb4c485c181ef0b3503e14d2c18c3553ef77b310b7fe5fcba3fdf860efc41f77e3f4f6
-EBUILD bison-mode-0.3.ebuild 542 SHA256 d5fc78e2a11ab87de634e61ec553187161b99798e964cd21b845a1a15efcd2f7 SHA512 8c2326423f029a6ebd7560bdc29b9565f394887f681573d808ff037fb3bcd537f2a91834b96a8b0dc1f496f4359a2014d6077a1a303c0e7285094c61f1a92efd WHIRLPOOL 6cfb253e204820525d9d4adeef14b5cf1e964b8303526995b12a115f22569084b2292c7983a7d69192736f998814af5366ea00672e8897bd01d0c6e1ee6665f3
-MISC ChangeLog 539 SHA256 da0adde2c1fe56ce8f65b1c971922465acd48811daab5d28b3c62c392c380430 SHA512 298c3593dc498ad7e225d2dec2a2829ad2f1624c262d383f1c3d96ecbbc4422cd89e1e7c123553f345788a57a0c41bf90a1af95e6cff3c9186ac5371e49e1f99 WHIRLPOOL 9456e546264f941478c50be2994e04eab8ce18b13ac2fd677407a993985593cb809a22e0a821ecd101084b687b1bbe972ed5fd3557a0264479bb5cbc72c075cb
-MISC metadata.xml 285 SHA256 4148a308f7e2bf0aee9778ed2c6134b4f7dd7dda47d5f5211d0ee77995874c88 SHA512 834f18f14033cb117e52b9970d1cc301d2e28b676086bf5a0d5359c60f54ceb2a189ca79c861926c72c582d1bd51b4758af7e3675f7383aafc0b3a35d649b6c7 WHIRLPOOL 98da06b1985b8d935edf15fd4ef41c616af7aab167a80d4ff3dd65489c00d4905828ea58c7af79afaadfa7233d86739c536973a6347c401848433564469e9aa6
+EBUILD bison-mode-0.3.ebuild 513 SHA256 83f0ffc79d82a70572c7edc0a6bd422e9f2b131d65906aa6b5fc7b7a51308bdd SHA512 b52fadf9c7c6e5f493e332849ff3769c4859226598fa15bcf981f5b12387052c8a74ce445a4b03db25660b55ff6e06e6250fd68b03e1e335796c56a201918e6c WHIRLPOOL 59c639a58164ecca107e8289624ba0b7849062766bfa2d8b14c8630e1a61c89468b91857baf6d23eff475a99958639a0bd2cf22687d18f8654960a013905bc8c
+MISC ChangeLog 746 SHA256 84aeacf4f9888ccfe854b7858ebb4c7943bcbc964bf582a90aae6f0379641ad1 SHA512 f18b5081190c815fc4781709841acf8755fe0f5cc8e4ac855234452ee04c3da37a988b76cf6955c9a983d0f8b7e4ceb9691fa7a6da2a7f5fe059300630293ba5 WHIRLPOOL ddca9d262179bd947c0cb162b0b999c09bb57ee4e07d5bc1fa71e07a23ac0d603d42011725406ff2ad43ecc12794b28bd12481639c62d8fad08ff73e538ab9b9
+MISC metadata.xml 253 SHA256 74629ae7ccfb41f7152a81f05d89d5f83f09dd2e64e6f08351a1775eb07b10e7 SHA512 4785a81a3804eb61448deb7c0aaef509476a176c86ebcf0e6d9c148535b0781d5eca533f51afb7c337485b1b5197afee9eb27ae785a1c777e983d7b068c680d5 WHIRLPOOL 7601ee9324710dede8782fe35b1b8db6c2ad80c150031f421e25c659a7e2cef12f44684238f5449ebcbfce60968bfc5886b5582b51a5ad47f7c0ee21b2481c4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVLBneAAoJEF1ww0n44d9N4yYIAN6uleqzdM9Xu+0/+/CHTAvC
-pbIDnqTEuNj/dEXwKqLJf9OqkPe9MtgHLIcxd1dfBcN2unbXLNKxG5TAuUtQwJly
-6GdscHJqqmBWP86ngAdK2nZhsxCWv6NLuqQX+ATyCwXP5Bg+1m3zr4o4or9YKMym
-jFJRILlBs32dxIalKAtwaTyhtWNW9hLav+XoBE2cDW6W9zVSUECgTVXXStySeDEF
-bp9FoCZXt5fCd6M7eQ5hNGgujO/VAIGc+IMWQaQL/Bz9VdGKzbi0SikW+HTlJYKi
-fLczRuGplZaZ6GnQa8I0KashV7GFIrIR2116yfYVYPSFS6v+V/NsFno+qT2+dsg=
-=kSmY
+iQGcBAEBCAAGBQJVNIoGAAoJEJQzkH1pP7W4BJ4L/RA6KZ9/BkgEjwQ9dko/Lp1C
+BThUuSyLiGhTKDxjHzgBabiguw571+1aWfSv+FtIEoX0TQ4tDkGBLYi+CDJFB/lS
+P7srmpRgcGQ8U8X8aUdqvWuaLYNvBBQyDVsF4qWtayts8YTIylyMHI/rRpJMcceL
+ujl1ixtx78bVrL+n6uLgG+1V6EtUrU9Vv0PYR3EINskQCSIby1ZUXuC/DaDPMJd+
+h/seQnsi5/Fud5l1qFqeiJtKRoT/NCJFRErvpHfACmWoav/fpO7U94KotSmPZ2Yr
+0Gj72Vl21a+mOnJkLl6hDGIZsMiOjqGwxMemmMTx8u+KCIYtzq6MM1CHs77mjO63
+cjQTkXXTYqevXnYgtF1ovB3IWGHlkraD55yehzFBSLr3qKA+3qv8FkiWFAVW1IxL
+jbDYHNughWXmJLRsNIhO6ddxQ8M8zjvqy7m3UVEhGN1X15eHayt3O3nWMVh3cfKb
+rIIdutVP+YTlbU2dv2pe962VpIJfgO3voSP/6UVhqQ==
+=ej1p
 -----END PGP SIGNATURE-----
