@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>nicolasbock@gentoo.org</email>
-		<name>Nicolas Bock</name>
-	</maintainer>
-	<longdescription lang="en">
-	</longdescription>
+<herd>emacs</herd>
+<maintainer>
+  <email>nicolasbock@gentoo.org</email>
+  <name>Nicolas Bock</name>
+</maintainer>
 </pkgmetadata>
