@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/bison-mode
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/bison-mode/ChangeLog,v 1.2 2015/04/13 19:32:43 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/bison-mode/ChangeLog,v 1.3 2015/04/20 05:09:03 ulm Exp $
+
+  20 Apr 2015; Ulrich Müller <ulm@gentoo.org> bison-mode-0.3.ebuild,
+  metadata.xml:
+  Add package to emacs herd. Specify LICENSE more precisely. Install README
+  file. Remove empty longdescription and variables.
 
   13 Apr 2015; Nicolas Bock <nicolasbock@gentoo.org> bison-mode-0.3.ebuild:
   app-emacs/bison-mode: Added ~x86 keyword.
